2011-03-28  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* rcssmonitor3d/rcssmonitor3d.rb: 
	- only log error messages to output (a small cleanup for 0.6.5 release)

2011-03-26  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* NEWS: 
	* RELEASE:
	- updated for 0.6.5 release

2011-03-25  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* rcssserver3d/CMakeLists.txt: 
	* rcssserver3d/main.cpp: 
	* rcssserver3d/rcssserver3d.rb:
	* doc/users/rcssmonitor3d.tex: 
	- rename: simspark.rb -> rcssserver3d.rb 

2011-03-24  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* plugin/soccer/CMakeLists.txt: 
	* plugin/soccermonitor/CMakeLists.txt: 
	- fixed to use CMake's own FindDevIL module
	
	* plugin/soccer/gamestateaspect/gamestateitem.cpp
	  (GameStateItem::GetInitialPredicates): 
	- do not try to send obsolete variables: AgentMass and AgentMaxSpeed 
	
	* rcssserver3d/naosoccersim.rb: 
	- added MaxTouchGroupSize variable
	- added a BorderSize variable to stop simulator from complaining for 
	  missing variable
	
	* CMakeLists.txt: 
	- updated PACKAGE_VERSION to 0.6.5 for the next release
	
	* rcssserver3d_config.h.cmake: 
	- added a RCSS_VERSION constant to store rcssserver3d version
	
	* rcssserver3d/main.cpp (SimSpark::PrintGreeting): 
	- use RCSS_VERSION instead of the hard coded version number
	
	* rcssserver3d/simspark.rb: 
	* rcssmonitor3d/rcssmonitor3d.rb:
	- use the new sparkSetupTimer()  

2011-03-23  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* RELEASE: 
	- updated release information for the next release
	
	* data/rsg/agent/nao/naoneckhead.rsg: 
	- enable sensing field lines by default

2011-02-10  Sander van Dijk  <sgvandijk@gmail.com>

	* rcssserver3d/rcssserver3d/main.cpp
	- set different agent and monitor ports with --agent-posrt and --server-port

	* /trunk/rcssserver3d/data/textures/rcs-naofield.png
	- new field texture

2011-01-13  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* cmake/UseLATEX.cmake: 
	- updated to version 1.7.2
	